# Cplusy

1.0/: ZadClassExample.cc  ZadEnumExample.cc  ZadMainExample.cc  ZadStringExample.cc
2.0/: ZadPrzekazywanieTablic.cc  ZadPrzekazywanieTablicKopia.cc  ZadPrzekazywanieTablicZpodaniemRozmiaru.cc  ZadZwracanie.cc
3.0/: LBitoweOperatoryLogiczneSingleVariable.cc  ZadArytmetykaWskaznikow.cc  ZadArytmetykaWskaznikowTablica2D.cc  ZadOperatoryPrzypisania.cc
ZadClassKcpp/: CMakeLists.txt  main.cc
ZadClassKcpp/include/: ZadClassExample.h  ZadKcpp.h  ZadOperatoryPrzypisania.h  ZadParzysta.h  ZadStruct.h  ZadZwracanie.h
ZadClassKcpp/src/: ZadClassExample.cc  ZadKcpp.cc  ZadOperatoryPrzypisania.cc  ZadParzysta.cc  ZadStruct.cc  ZadZwracanie.cc
